Fix top-left-cell always visible

--- a/src/main.scss
+++ b/src/main.scss
@@ -38,6 +38,9 @@ td .p-button.p-button-icon-only {
     width: 100%;
   }
 }
+.p-datatable-scrollable .p-datatable-thead {
+  z-index: 500;
+}
 .p-datatable-wrapper {
   @extend .custom-scroll-bar;
 }
